force-app/main/Government_Documents/Purchasing_and_Invoicing/objects/Invoice_Payment__c/fields/Agency_Supported__c.field-meta.xml
<CustomField>
    <fullName>Agency_Supported__c</fullName>
    <formula
  >Payable_Invoice__r.Federal_Contract__r.Contracting_Department__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agency Supported</label>
    <type>Text</type>
</CustomField>