force-app/main/Government_Documents/Purchasing_and_Invoicing/objects/Invoice_Payment__c/fields/Certifier__c.field-meta.xml
<CustomField>
    <fullName>Certifier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Certifier</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Invoice_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>