force-app/main/Government_Documents/Purchasing_and_Invoicing/objects/Invoice_Payment__c/fields/Invoice_Payment_Justification__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Payment_Justification__c</fullName>
    <label>Invoice Payment Justification</label>
    <type>TextArea</type>
</CustomField>