force-app/main/Government_Documents/Purchasing_and_Invoicing/objects/Invoice_Payment__c/fields/Licenses_Associated_with_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Licenses_Associated_with_Invoice__c</fullName>
    <inlineHelpText>Are licenses associated with this invoice?</inlineHelpText>
    <label>Licenses Associated with Invoice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>