force-app/main/Government_Documents/Purchasing_and_Invoicing/objects/Invoice_Payment__c/fields/Payable_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Payable_Invoice__c</fullName>
    <label>Payable Invoice</label>
    <referenceTo>Payable_Invoice__c</referenceTo>
    <relationshipLabel>Invoice Payments</relationshipLabel>
    <relationshipName>Invoice_Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>